# swagger.json
@@ -67,37 +67,6 @@
   },
   "paths": {
     "/api/incidents": {
-      "get": {
-        "summary": "Get all incidents",
-        "tags": [
-          "Incidents"
-        ],
-        "responses": {
-          "200": {
-            "description": "List of all incidents",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Incident"
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      },
       "post": {
         "summary": "Create a new incident",
         "tags": [
